# stunt-jumps-tracker_iv

./: .gitignore  CMakeLists.txt  NOTICE
script/: deps.json  winsetup.ps1
source/: CMakeLists.txt  app.cxx  app.hpp  main.cxx  renderer.cxx  renderer.hpp  resource.h  resources.rc
source/resources/: resources.res  resourcesInclude.h  resourcesInclude.s  vert.spv
source/shaders/: frag.spv  shader.frag  shader.vert
src/: CMakeLists.txt  app.cxx  app.hpp  main.cxx  renderer.hpp  windowing.cxx  windowing.hpp
